--- a/static/editdb.html
+++ b/static/editdb.html
@@ -191,9 +191,9 @@
 
         <div class="col push-l3 l3 s12 white-text">
           <h5>Hours</h5>
-            <p>Mon-Thur: 12pm-6pm</p>
-            <p>Fri-Sat: 12pm-7pm</p>
-            <p>Sun: 12pm-5pm</p>
+            <p>Mon - Thur: 12pm - 6pm</p>
+            <p>Fri - Sat: 12pm - 7pm</p>
+            <p>Sun: 12pm - 5pm</p>
         </div>
       </div>
     </div>
