how to delete data?

--- a/static/db.html
+++ b/static/db.html
@@ -129,6 +129,7 @@
         <td>{{ element.IngredientName }}</td>
         <td>{{ element.Quantity }}</td>
         <td>{{ element.SourceName }}</td>
+        <td><a class="waves-effect waves-light btn red darken-4">Delete</a></td>
       </tbody>
     </table>
   </div>
